mcfgthread: Update to 2.0.1

--- a/mingw-w64-mcfgthread/PKGBUILD
+++ b/mingw-w64-mcfgthread/PKGBUILD
@@ -4,7 +4,7 @@ _realname=mcfgthread
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}"-libs)
-pkgver=1.9.2
+pkgver=2.0.1
 pkgrel=1
 pkgdesc="An efficient gthread implementation, providing C++11 threading support (mingw-w64)"
 arch=('any')
@@ -20,7 +20,7 @@ makedepends=(
   "git"
 )
 source=("git+https://github.com/lhmouse/mcfgthread.git#tag=v${pkgver%.*}-ga.${pkgver##*.}")
-sha256sums=('aa83745c5fcea6b2615da0f20b405291a3e0c72c521b238350b075a4f1e8be21')
+sha256sums=('a33be150c3c736f43a37fb34e2af82ebb8c73f00cd0c39bfc10e478e8efe091f')
 
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
@@ -36,7 +36,7 @@ build() {
 
   # Build the DLL first, as Meson creates the DLL in the working directory,
   # which might get picked up by cc1.exe when it is only half-baked.
-  ninja libmcfgthread-1.dll
+  ninja libmcfgthread-${pkgver%%.*}.dll
   meson compile
 
   rm -rf "${srcdir}${MINGW_PREFIX}"
@@ -63,8 +63,8 @@ package_mcfgthread-libs() {
 
   mkdir -p "${pkgdir}${MINGW_PREFIX}"
   cd "${srcdir}${MINGW_PREFIX}"
-  cp --parents -r bin/libmcfgthread-1.dll -t "${pkgdir}${MINGW_PREFIX}"
-  cp --parents -r bin/libmcfgthread-minimal-1.dll -t "${pkgdir}${MINGW_PREFIX}"
+  cp --parents -r bin/libmcfgthread-${pkgver%%.*}.dll -t "${pkgdir}${MINGW_PREFIX}"
+  cp --parents -r bin/libmcfgthread-minimal-${pkgver%%.*}.dll -t "${pkgdir}${MINGW_PREFIX}"
 }
 
 # template start; name=mingw-w64-splitpkg-wrappers; version=1.0;
