neovim: update to 0.10.4

--- a/mingw-w64-neovim/PKGBUILD
+++ b/mingw-w64-neovim/PKGBUILD
@@ -30,7 +30,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-lua51-mpack"
              "${MINGW_PACKAGE_PREFIX}-gettext-tools"
              "${MINGW_PACKAGE_PREFIX}-ninja")
-source=("${_realname}-${pkgver}.tar.gz::https://github.com/neovim/neovim/archive/refs/tags/v${pkgver}.tar.gz"
+source=("${_realname}-${pkgver}.tar.gz::${msys2_repository_url}/archive/refs/tags/v${pkgver}.tar.gz"
         "0001-cmake-disable-bundling.patch")
 sha256sums=('10413265a915133f8a853dc757571334ada6e4f0aa15f4c4cc8cc48341186ca2'
             '356ecd2d571ef9bc30bdcdc55dc27b39a9283019dadaac748b508cb9f71ea0f5')
