neovim-qt: update to 0.2.19

--- a/mingw-w64-neovim-qt/PKGBUILD
+++ b/mingw-w64-neovim-qt/PKGBUILD
@@ -3,9 +3,9 @@
 _realname=neovim-qt
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.2.18
-pkgrel=2
-pkgdesc="Neovim client library and GUI, in Qt5. (mingw-w64)"
+pkgver=0.2.19
+pkgrel=1
+pkgdesc="Neovim client library and GUI, in Qt6. (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
@@ -13,17 +13,17 @@ msys2_references=(
 )
 url='https://github.com/equalsraf/neovim-qt'
 license=('spdx:ISC')
-depends=("${MINGW_PACKAGE_PREFIX}-qt5-svg"
+depends=("${MINGW_PACKAGE_PREFIX}-qt6-svg"
          "${MINGW_PACKAGE_PREFIX}-neovim"
          "${MINGW_PACKAGE_PREFIX}-msgpack-c")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
-             "${MINGW_PACKAGE_PREFIX}-qt5-tools")
+             "${MINGW_PACKAGE_PREFIX}-qt6-tools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-gtest")
 source=("https://github.com/equalsraf/neovim-qt/archive/v${pkgver}.tar.gz"
         "001-disable-deployment.patch")
-sha256sums=('b1e1e019946ecb106b3aea8e35fc6e367d2efce44ca1c1599a2ccdfb35a28635'
+sha256sums=('2c5a5de6813566aeec9449be61e1a8cd8ef85979a9e234d420f2882efcfde382'
             '31ae40b26be048367afc1a5609bfb8dcfdd0681a584d6cb060126d385d2308e1')
 
 prepare() {
@@ -47,6 +47,7 @@ build() {
       -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${extra_config[@]}" \
+      -DWITH_QT=Qt6 \
       -DUSE_SYSTEM_MSGPACK=ON \
       -DENABLE_TESTS=OFF \
       ../${_realname}-${pkgver}
