siesta: update to 5.2.1

--- a/mingw-w64-siesta/PKGBUILD
+++ b/mingw-w64-siesta/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=siesta
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=5.0.1
+pkgver=5.2.1
 pkgrel=1
 pkgdesc="A first-principles materials simulation code using DFT. (mingw-w64)"
 arch=('any')
@@ -38,7 +38,7 @@ _w90_ver=3.1.0
 source=("https://gitlab.com/siesta-project/siesta/-/releases/${pkgver}/downloads/${_realname}-${pkgver}.tar.gz"
         "https://github.com/wannier-developers/wannier90/archive/v${_w90_ver}/wannier90-${_w90_ver}.tar.gz"
         "001-fix-build-on-mingw.patch")
-sha256sums=('1933cde879d921577a5e854c459531951d0afc9fd193f086a04457e9022ba9a0'
+sha256sums=('9548010073662fde9be5e5fd983647cc750ec424106210c3a19b0f354053abd4'
             '40651a9832eb93dec20a8360dd535262c261c34e13c41b6755fa6915c936b254'
             '95ea74aa1083bad50480bc2abf1777aa463df1c8393845e1fe83402240f91efd')
 noextract=("wannier90-${_w90_ver}.tar.gz")
@@ -77,6 +77,8 @@ build() {
       -DBUILD_SHARED_LIBS=ON \
       -DCMAKE_DLL_NAME_WITH_SOVERSION=ON \
       -DSIESTA_SHARED_LIBS=ON \
+      -DSIESTA_WITH_ELPA=OFF \
+      -DSIESTA_WITH_ELSI=OFF \
       -DSIESTA_WITH_FFTW=ON \
       -DSIESTA_WITH_LIBXC=ON \
       -DSIESTA_WITH_MPI=ON \
