--- a/mingw-w64-gnome-text-editor/PKGBUILD
+++ b/mingw-w64-gnome-text-editor/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=gnome-text-editor
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=47.2
+pkgver=47.3
 pkgrel=1
 pkgdesc="A simple text editor for the GNOME desktop (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://gitlab.gnome.org/GNOME/gnome-text-editor"
+url='https://apps.gnome.org/TextEditor/'
+msys2_repository_url='https://gitlab.gnome.org/GNOME/gnome-text-editor'
 msys2_references=(
   'archlinux: gnome-text-editor'
 )
@@ -29,7 +30,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-gettext"
              "${MINGW_PACKAGE_PREFIX}-itstool")
 source=(https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz)
-sha256sums=('7d04039b16174ec5fd65fea2f447f3febd9fdf2aa36e9997abc6ff992cc31e38')
+sha256sums=('46c672bfe86e44de980797636a280f05cc5eaf6cde9b42dc4bcc956405629725')
 
 build() {
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
