--- a/mingw-w64-neovim/PKGBUILD
+++ b/mingw-w64-neovim/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=neovim
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.10.3
+pkgver=0.10.4
 pkgrel=1
 pkgdesc='Fork of Vim aiming to improve user experience, plugins, and GUIs (mingw-w64)'
 arch=('any')
@@ -12,6 +12,7 @@ msys2_references=(
   'archlinux: neovim'
 )
 url='https://neovim.io/'
+msys2_repository_url='https://github.com/neovim/neovim'
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-gettext-runtime"
          "${MINGW_PACKAGE_PREFIX}-libiconv"
@@ -31,7 +32,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/neovim/neovim/archive/refs/tags/v${pkgver}.tar.gz"
         "0001-cmake-disable-bundling.patch")
-sha256sums=('39fab47d241da7b9418823cc563c689d522c1c4b2def04036393834f3f1ca94c'
+sha256sums=('10413265a915133f8a853dc757571334ada6e4f0aa15f4c4cc8cc48341186ca2'
             '356ecd2d571ef9bc30bdcdc55dc27b39a9283019dadaac748b508cb9f71ea0f5')
 
 
@@ -44,7 +45,6 @@ prepare() {
 }
 
 build() {
-  cd "${srcdir}/${_realname}-${pkgver}"
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
   declare -a extra_config
