python-xlsxwriter: update to 3.2.2

--- a/mingw-w64-python-xlsxwriter/PKGBUILD
+++ b/mingw-w64-python-xlsxwriter/PKGBUILD
@@ -1,10 +1,9 @@
 # Maintainer: Ryuta Suzuki <oroppas@gmail.com>
 
-_pyname=XlsxWriter
 _realname=xlsxwriter
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.2.1
+pkgver=3.2.2
 pkgrel=1
 pkgdesc="A Python module for creating Excel XLSL files (mingw-w64)"
 arch=('any')
@@ -21,11 +20,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
-source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('97618759cb264fb6a93397f660cca156ffa9561743b1823dafb60dc4474e1902')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('befc7f92578a85fed261639fb6cde1fd51b79c5e854040847dde59d4317077dc')
 
 build() {
-  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
