--- a/mingw-w64-winstorecompat-git/PKGBUILD
+++ b/mingw-w64-winstorecompat-git/PKGBUILD
@@ -3,9 +3,9 @@
 _realname=winstorecompat
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
-pkgver=12.0.0.r473.gce0d0bfb7
+pkgver=12.0.0.r480.gea22a99cb
 pkgrel=1
-_commit='ce0d0bfb705a74c6da90e539c7f7291785cfda83'
+_commit='ea22a99cb06640697c45657e17bd5cb9603e62d7'
 pkgdesc="MinGW-w64 winRT compat library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,7 +21,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "git")
 options=('!buildflags' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('bd2ea400a04e876c9c526d01297a8798c5c6ee601348c63b5dd34f79e6b72f67')
+sha256sums=('af6b9851bb46020185293452cccbd82d5b6c2ff1be536db80e02b15c97a3fb5d')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
