--- a/mingw-w64-ada-url/PKGBUILD
+++ b/mingw-w64-ada-url/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.9.2
 pkgrel=1
 pkgdesc="WHATWG-compliant and fast URL parser written in modern C++ (mingw-w64)"
 arch=('any')
-mingw_arch=('ucrt64' 'clang64')
+mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/ada-url/ada'
 license=('spdx:Apache-2.0 OR MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
