--- a/mingw-w64-directxmesh/PKGBUILD
+++ b/mingw-w64-directxmesh/PKGBUILD
@@ -5,12 +5,12 @@ _rn=DirectXMesh
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 # Version from CMakeLists.txt
-pkgver=1.6.6
-_tag=jun2024
-pkgrel=2
+pkgver=1.6.7
+_tag=oct2024
+pkgrel=1
 pkgdesc="DirectXMesh geometry processing library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='http://go.microsoft.com/fwlink/?LinkID=324981'
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
@@ -20,7 +20,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-directxmath"
          "${MINGW_PACKAGE_PREFIX}-directx-headers"
          "${MINGW_PACKAGE_PREFIX}-gcc-libs")
 source=("${_realname}-${_tag}.tar.gz"::"https://github.com/microsoft/DirectXMesh/archive/refs/tags/${_tag}.tar.gz")
-sha256sums=('91683418a0481276e25c5bc81fdb4069993693de5cf9afb5493e2a48d09318de')
+sha256sums=('95fb742625b272b0fb382ea9807b4f336fed146d1b8f38f45de0da203f5d013e')
 
 build() {
   cd "${srcdir}/${_realname}-${_tag}"
@@ -31,6 +31,16 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Release")
   else
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
+
+  if [ "${CARCH}" == "x86_64" ]; then
+    extra_config+=("-DDIRECTX_ARCH=x64")
+  fi
+  if [ "${CARCH}" == "i686" ]; then
+    extra_config+=("-DDIRECTX_ARCH=x86")
+  fi
+  if [ "${CARCH}" == "aarch64" ]; then
+    extra_config+=("-DDIRECTX_ARCH=arm64")
   fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
