directxtex: Update to October 2024 and enable arm64 builds

--- a/mingw-w64-directxtex/PKGBUILD
+++ b/mingw-w64-directxtex/PKGBUILD
@@ -4,12 +4,12 @@ _realname=directxtex
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 # Version from CMakeLists.txt
-pkgver=2.0.4
-_tag=jun2024
-pkgrel=2
+pkgver=2.0.6
+_tag=oct2024
+pkgrel=1
 pkgdesc="DirectXTex texture processing library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'aur: mingw-w64-directxtex'
 )
@@ -23,7 +23,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja"
 			 "${MINGW_PACKAGE_PREFIX}-efxc2")
 source=("${_realname}-${_tag}.tar.gz"::"https://github.com/microsoft/DirectXTex/archive/$_tag.tar.gz")
-sha256sums=('cfabac30d61340c1f3e5beccb6b581b52694c7758c1c001fc1bbecc66cd84948')
+sha256sums=('0caea49c52bba24eb6025ad1f46c9aa00224e91c075b55a21b738a23ed5fedfe')
 
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
@@ -33,6 +33,13 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Release")
   else
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
+
+  if [ "${CARCH}" == "x86_64" ]; then
+    extra_config+=("-DDIRECTX_ARCH=x64")
+  fi
+  if [ "${CARCH}" == "aarch64" ]; then
+    extra_config+=("-DDIRECTX_ARCH=arm64")
   fi
 
   #DBUILD_DX11 requires fxc.exe but that's not available.
