directxtk: Update to October 2024 and enable arm64 builds

--- a/mingw-w64-directxtk/PKGBUILD
+++ b/mingw-w64-directxtk/PKGBUILD
@@ -4,12 +4,12 @@ _realname=directxtk
 _rn=DirectXTK
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.8.8
-_tag=jun2024
-pkgrel=3
+pkgver=1.9.0
+_tag=oct2024
+pkgrel=1
 pkgdesc="DirectX Tool Kit for DirectX 11 (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='http://go.microsoft.com/fwlink/?LinkId=248929'
 license=('MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
@@ -20,7 +20,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/microsoft/DirectXTK/archive/refs/tags/${_tag}.tar.gz"
         0001-directxtk-remove-mingw-workaround.patch)
-sha256sums=('b2ab875c6abf482d4fb895f0c1f74fb8ed32cea5420165547b7a7ac01a3b08a6'
+sha256sums=('3809d151be675bf18aeeff22494ebc6dc8de882881f4ee86a15afdbafc94b7c1'
             'aab4d92f86afa117aaf323c7c4c87eaa30022565f2ca334892bf7b385bfabb20')
 
 prepare() {
@@ -37,6 +37,13 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Release")
   else
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
+
+  if [ "${CARCH}" == "x86_64" ]; then
+    extra_config+=("-DDIRECTX_ARCH=x64")
+  fi
+  if [ "${CARCH}" == "aarch64" ]; then
+    extra_config+=("-DDIRECTX_ARCH=arm64")
   fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
