--- a/mingw-w64-rust/PKGBUILD
+++ b/mingw-w64-rust/PKGBUILD
@@ -16,7 +16,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-rust-wasm")
          "${MINGW_PACKAGE_PREFIX}-rust-src")
-pkgver=1.84.0
+pkgver=1.84.1
 pkgrel=1
 pkgdesc="Systems programming language focused on safety, speed and concurrency (mingw-w64)"
 arch=('any')
@@ -51,10 +51,9 @@ source=("${rust_dist_server}/${_realname}c-${pkgver}-src.tar.gz"{,.asc}
         "0008-disable-self-contained-for-gnu-targets.patch"
         # remove after 1.85.0 update
         "0013-update-psm.patch"
-        "0014-update-cc.patch"
-        "134240.patch")
+        "0014-update-cc.patch")
 noextract=(${_realname}c-${pkgver}-src.tar.gz)
-sha256sums=('15cee7395b07ffde022060455b3140366ec3a12cbbea8f1ef2ff371a9cca51bf'
+sha256sums=('5e2fb5d49628a549f7671b2ccf9855ab379fd442831a7c2af16e0cdcc31bb375'
             'SKIP'
             '1aeb932158bd710538c73702db6945cb68a8fb08c519e6e12706b94263b36db8'
             '200b9ff220857e53e184257720a14553b2f4aa02577d2ed9842d45d4b9654810'
@@ -63,8 +62,7 @@ sha256sums=('15cee7395b07ffde022060455b3140366ec3a12cbbea8f1ef2ff371a9cca51bf'
             '56882f1a0f1404c10c7726d6cc37444f2b343e72b969badfcb43760f80db0f32'
             '98bc3f2bd7371a5b8d14fd7b03bf05574e206d1d9e52bcfbe66d71398504da3c'
             '602481687fa580eb426c619f673128702c800e91d4f476fcbaf48b86a7a1b963'
-            '482bf5599150faba207dfb389e8d1c4a6a6b2b7574e1ec0c2239563b7e2b0c35'
-            '58eaf7e10272395e7f23e95a292bd09f1090663b094fbab451a835239cbd3365')
+            '482bf5599150faba207dfb389e8d1c4a6a6b2b7574e1ec0c2239563b7e2b0c35')
 validpgpkeys=('108F66205EAEB0AAA8DD5E1C85AB96E6FA1BE5FE'  # Rust Language (Tag and Release Signing Key) <rust-key@rust-lang.org>
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard <tstellar@redhat.com>
               'B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
@@ -119,11 +117,6 @@ prepare() {
   # update cc dependency for library and bootstrap to fix compilation for `wasm32v1-none` target
   apply_patch_with_msg \
     0014-update-cc.patch
-
-  # backport of https://github.com/rust-lang/rust/pull/134240 to remove unneded `rust-objcopy.exe`
-  # from rust sysroot
-  apply_patch_with_msg \
-    134240.patch
 }
 
 build() {
