--- a/mingw-w64-nextpnr/PKGBUILD
+++ b/mingw-w64-nextpnr/PKGBUILD
@@ -4,7 +4,7 @@ _realname=nextpnr
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.7
-pkgrel=3
+pkgrel=4
 pkgdesc="Portable FPGA place and route tool (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -25,15 +25,25 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-boost"
   "${MINGW_PACKAGE_PREFIX}-eigen3"
   "${MINGW_PACKAGE_PREFIX}-icestorm"
-  #"${MINGW_PACKAGE_PREFIX}-prjtrellis" Fails to build against v1.4
+  "${MINGW_PACKAGE_PREFIX}-prjtrellis"
   "git"
 )
 source=("${_realname}::git+https://github.com/YosysHQ/${_realname}.git#tag=${_realname}-${pkgver}"
         "001-fix-find-boost-built-with-cmake.patch"
-        "002-fix-build-with-boost-1.85.patch::https://github.com/YosysHQ/nextpnr/commit/f0859503.patch")
+        "002-fix-build-with-boost-1.85.patch::https://github.com/YosysHQ/nextpnr/commit/f0859503.patch"
+        "003-fix-build-with-clang-19.patch")
 sha256sums=('ed14f31c68a1ec2e7dbae78ebfb3a0a1baa16d9e5c6d0252ffae6485f61906a4'
             '69f73e0ea3111f7580dc57b62bfefb0943b67de6c9245364f435abf58973d820'
-            '4e93475cc6c09b93b707d64e06779f419eddcc6f705e5f568180795f0915f745')
+            '4e93475cc6c09b93b707d64e06779f419eddcc6f705e5f568180795f0915f745'
+            '8ef99dcca08c7e6b23ca709a7cc083160ef5d78b485606c617697142c31585b9')
+
+apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying ${_patch}"
+    patch -Nbp1 -i "${srcdir}/${_patch}"
+  done
+}
 
 # pkgver() {
 #   cd "${_realname}"
@@ -42,8 +52,10 @@ sha256sums=('ed14f31c68a1ec2e7dbae78ebfb3a0a1baa16d9e5c6d0252ffae6485f61906a4'
 
 prepare() {
   cd "${srcdir}/${_realname}"
-  patch -p1 -i "${srcdir}"/001-fix-find-boost-built-with-cmake.patch
-  patch -p1 -i "${srcdir}"/002-fix-build-with-boost-1.85.patch
+  apply_patch_with_msg \
+    001-fix-find-boost-built-with-cmake.patch \
+    002-fix-build-with-boost-1.85.patch \
+    003-fix-build-with-clang-19.patch
 
   git submodule update --init --recursive --depth=1
 }
@@ -59,9 +71,9 @@ build() {
   fi
 
   unset _extra-archs
-  # if [ "$CARCH" = "x86_64" ]; then
-  #   _extra_archs=";ecp5"
-  # fi
+  if [ "$CARCH" = "x86_64" ]; then
+    _extra_archs=";ecp5"
+  fi
 
   _pyver=$(${MINGW_PREFIX}/bin/python -c "import sys;sys.stdout.write('.'.join(map(str, sys.version_info[:2])))")
 
@@ -98,7 +110,6 @@ package() {
   cd "${srcdir}"/build-${MSYSTEM}
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
 
-  _licenses="${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}"
-  mkdir -p "${_licenses}"
-  install -m 644 "${srcdir}/${_realname}"/COPYING "${_licenses}"
+  install -Dm644 "${srcdir}"/${_realname}/COPYING \
+    "${pkgdir}${MINGW_PREFIX}"/share/licenses/${_realname}/COPYING
 }
