--- a/mingw-w64-libslirp/PKGBUILD
+++ b/mingw-w64-libslirp/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=libslirp
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=4.8.0
-pkgrel=2
+pkgver=4.9.0
+pkgrel=1
 pkgdesc="General purpose TCP-IP emulator (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'mingw32' 'ucrt64' 'clang64' 'clangarm64')
@@ -18,16 +18,12 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf")
-source=("https://gitlab.freedesktop.org/slirp/${_realname}/-/archive/v${pkgver}/${_realname}-v${pkgver}.tar.bz2"
-        "https://gitlab.freedesktop.org/slirp/libslirp/-/commit/84361923047f867561efc0184a4af9c66c8ba852.patch")
+source=("https://gitlab.freedesktop.org/slirp/${_realname}/-/archive/v${pkgver}/${_realname}-v${pkgver}.tar.bz2")
 noextract=("${_realname}-v${pkgver}.tar.bz2")
-sha256sums=('1c2e3d30e41a055ed41f9d0b3234d0d143bc28f5ad84bb101413f830844df757'
-            'c8015e2e6bc0fd2a5aacc61424ab18b861320577b55ea7b15780b8e93f4b8a49')
+sha256sums=('0329092d1dbaf18a7ef640c4d9db54bba71af9e850437b5ff3b31f463951c8ab')
 
 prepare() {
   bsdtar -xf "${_realname}-v${pkgver}.tar.bz2" 2>/dev/null || bsdtar -xf "${_realname}-v${pkgver}.tar.bz2"
-  cd "${_realname}-v${pkgver}"
-  patch -p1 -i "${srcdir}/84361923047f867561efc0184a4af9c66c8ba852.patch"
 }
 
 build() {
