usbredir: update to 0.15.0

--- a/mingw-w64-usbredir/PKGBUILD
+++ b/mingw-w64-usbredir/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=usbredir
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.14.0
+pkgver=0.15.0
 pkgrel=1
 pkgdesc="Parser for the usbredir protocol (mingw-w64)"
 arch=('any')
@@ -24,19 +24,10 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-ninja"
   "${MINGW_PACKAGE_PREFIX}-pkgconf"
 )
-source=(https://www.spice-space.org/download/usbredir/${_realname}-${pkgver}.tar.xz{,.sig}
-        "0001-fix-callback-call-conv.patch")
-sha256sums=('924dfb5c78328fae45a4c93a01bc83bb72c1310abeed119109255627a8baa332'
-            'SKIP'
-            '27365d5ca6a1c85bed705a1ea0785082f036f99d7f3a11d9e13317da8f89d163')
+source=(https://www.spice-space.org/download/usbredir/${_realname}-${pkgver}.tar.xz{,.asc})
+sha256sums=('6dc2a380277688a068191245dac2ab7063a552999d8ac3ad8e841c10ff050961'
+            'SKIP')
 validpgpkeys=('206D3B352F566F3B0E6572E997D9123DE37A484F') # Victor Toso de Carvalho <me@victortoso.com>
-
-prepare() {
-  cd "${srcdir}"/${_realname}-${pkgver}
-
-  # fails to build for 32bit otherwise because it's expecting __stdcall
-  patch -p1 -i "${srcdir}/0001-fix-callback-call-conv.patch"
-}
 
 build() {
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
