--- a/mingw-w64-qt6-base/PKGBUILD
+++ b/mingw-w64-qt6-base/PKGBUILD
@@ -54,10 +54,9 @@ source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/subm
         007-Fix-crashes-in-rasterization-code-using-setjmp.patch
         009-qfileinfo-undefine-mingw-stat.patch
         010-export-some-constexpr-variables.patch
-        011-qt6-windeployqt-fixes.patch
-        012-qt6-lrelease.patch)
+        011-qt6-windeployqt-fixes.patch)
 sha256sums=('40b14562ef3bd779bc0e0418ea2ae08fa28235f8ea6e8c0cb3bce1d6ad58dcaf'
-            'b1ac154c3062ebcd96fec653d276cd4bfa2e8bc7433e97e49a6a25d7b5a6e646'
+            'c9f61d90ba7bce89f935c3e8ea90c448a641fd206666ef2d1542f61a3a655fc9'
             '0dac4b7c07ed52367f55cb54df5aee6966601edc579861e2504701f04c509b9b'
             '68156b8b7717a0ce19c4b991942469171bfa048cd5c90765115a546e65669a1d'
             'ed5b61bcb367bbda459bec903d796ea45604278f577a988d602ade07ec6bf363'
@@ -66,8 +65,7 @@ sha256sums=('40b14562ef3bd779bc0e0418ea2ae08fa28235f8ea6e8c0cb3bce1d6ad58dcaf'
             '3a256533401a48aff7e3c4b02118d62a0cccc2b3566c6e550e7b467aca3e496f'
             'f4261d43a142a24e5fa3b23e25813754839db84078cc8c6dc611139bf531e64a'
             '23656a7839d7dcb763d022722d723493c847914b0639bab861ddb05d823af5b7'
-            '742a15191e618a50c1fb4b93e87dda73a2bd130a6cb829cb2026256ec2c252e4'
-            'e1b7f33ea56aa135a8a7c34f74ebf5ae7b0c4cef23e3383816b7a55c4901bb75')
+            '742a15191e618a50c1fb4b93e87dda73a2bd130a6cb829cb2026256ec2c252e4')
 
 # Use the right mkspecs file
 if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
@@ -97,8 +95,7 @@ prepare() {
     006-qt-6.2.0-dont-add-resource-files-to-qmake-libs.patch \
     007-Fix-crashes-in-rasterization-code-using-setjmp.patch \
     009-qfileinfo-undefine-mingw-stat.patch \
-    011-qt6-windeployqt-fixes.patch \
-    012-qt6-lrelease.patch
+    011-qt6-windeployqt-fixes.patch
 
   if [[ ${MINGW_PACKAGE_PREFIX} != *-clang-* ]]; then
     apply_patch_with_msg \
