rio: update to 0.2.5

--- a/mingw-w64-rio/PKGBUILD
+++ b/mingw-w64-rio/PKGBUILD
@@ -2,16 +2,17 @@
 _realname=rio
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.2.4
+pkgver=0.2.5
 pkgrel=1
 pkgdesc="A hardware-accelerated GPU terminal emulator focusing to run in desktops and browsers (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/raphamorim/rio"
 license=('spdx:MIT')
+depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
 source=("https://github.com/raphamorim/${_realname}/archive/refs/tags/v${pkgver}.tar.gz")
-sha256sums=('2b7cd1a87164fc2a79c17362a0bb9e96034230a727031bd5f8a75b322aec514d')
+sha256sums=('03fb35ae46d3dcb48f3ea193854c8ad959018c364e5b632e0130970d0f18cddd')
 
 prepare() {
   cd "${_realname}-${pkgver}"
