--- a/mingw-w64-sqlitestudio/PKGBUILD
+++ b/mingw-w64-sqlitestudio/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=3.4.15.r1287.gc12b18b
 pkgrel=1
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 pkgdesc="Multi-platform SQLite database manager (mingw-w64)"
 url="https://sqlitestudio.pl/"
 msys2_repository_url="https://github.com/pawelsalawa/sqlitestudio"
@@ -32,10 +32,14 @@ makedepends=("git"
              "${MINGW_PACKAGE_PREFIX}-tcl")
 source=("${_realname}"::"git+https://github.com/pawelsalawa/$_realname.git#commit=$_commit"
         "001-destdir.patch"
-        "002-wineditline-link.patch")
+        "002-wineditline-link.patch"
+        "clang.patch"::"https://github.com/pawelsalawa/sqlitestudio/pull/5236.patch"
+        "arm64.patch"::"https://github.com/pawelsalawa/sqlitestudio/pull/5237.patch")
 sha256sums=('d04fd0c484b1d411bf4cae86eaa7e78b2a586a591c75e4f47dd9d9cf39c99e4e'
             '895958f1857fc9f8bfeffa88daa50e599082695d7ece974fb3dc6f1350806341'
-            '6154c2f9c491a1823a2bdc79594d118ed767c1fc28946608a3a3a7ad0a31cf91')
+            '6154c2f9c491a1823a2bdc79594d118ed767c1fc28946608a3a3a7ad0a31cf91'
+            'd1c77713605c8599a2207e04f478e81fe22511751c0a00c5c7a45714455c3d5a'
+            '625457ffbb2299f4407c04d37925cfea2a59a55352c8ab485917580086584142')
 
 pkgver() {
   cd "${srcdir}/${_realname}"
@@ -47,7 +51,7 @@ apply_patch_with_msg() {
   for _patch in "$@"
   do
     msg2 "Applying ${_patch}"
-    patch -Nbp1 -i "${srcdir}/${_patch}"
+    patch -Nbp1 --binary -i "${srcdir}/${_patch}"
   done
 }
 
@@ -56,7 +60,9 @@ prepare() {
 
   apply_patch_with_msg \
     001-destdir.patch \
-    002-wineditline-link.patch
+    002-wineditline-link.patch \
+    clang.patch \
+    arm64.patch
 }
 
 build() {
