sgml-common: Force using higher version of autoconf

--- a/mingw-w64-sgml-common/PKGBUILD
+++ b/mingw-w64-sgml-common/PKGBUILD
@@ -5,7 +5,7 @@ _realname=sgml-common
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=0.6.3
-pkgrel=2
+pkgrel=3
 pkgdesc='Tools for maintaining centralized SGML catalogs. (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -35,7 +35,7 @@ prepare() {
   cp /usr/share/automake-1.15/COPYING .
   patch -Np1 -i $srcdir/sgml-common-0.6.3-manpage-1.patch
   patch -Np1 -i $srcdir/sgml-common-0.6.3-sysconfdir.patch
-  autoreconf -vfi
+  WANT_AUTOCONF=latest autoreconf -vfi
 }
 
 build() {
