ecccodes: Update to 2.39.0 and enable aarch64 builds

--- a/mingw-w64-eccodes/PKGBUILD
+++ b/mingw-w64-eccodes/PKGBUILD
@@ -3,11 +3,11 @@
 _realname=eccodes
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.35.0
-pkgrel=2
+pkgver=2.39.0
+pkgrel=1
 pkgdesc="ECMWF's GRIB and BUFR encoding/decoding library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://confluence.ecmwf.int/display/ECC/ecCodes+Home"
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
@@ -26,10 +26,12 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-python")
 source=(https://confluence.ecmwf.int/download/attachments/45757960/${_realname}-${pkgver}-Source.tar.gz
-        fix-mingw.patch)
+        001-fix-mingw.patch
+        002-grib-fortran.patch)
 noextract=(${_realname}-${pkgver}-Source.tar.gz)
-sha256sums=('16888fb6679b1e241f50b69f300ac50124a3192342ae2ea903d7621b664e79ea'
-            '34fb5c05384f9aa73825d7500f71470b9f954a1136e0d116a2d54012eec05d3f')
+sha256sums=('0c4d746700acc49af9c878925f1b26bdd42443ff7c2d7c676deb2babb6847afb'
+            'b35939c6187f36e3843b68b6f30148b1b819e8cadcf52914507e929b2d3f4723'
+            '4d73595db12920bbcedb3a39dfad9c96609ac1f196da48935ca543f838a3aaef')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -46,7 +48,8 @@ prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}-Source
 
   apply_patch_with_msg \
-    fix-mingw.patch
+    001-fix-mingw.patch \
+    002-grib-fortran.patch
 }
 
 build() {
