--- a/mingw-w64-pyinstaller-hooks-contrib/PKGBUILD
+++ b/mingw-w64-pyinstaller-hooks-contrib/PKGBUILD
@@ -3,13 +3,13 @@
 _realname=pyinstaller-hooks-contrib
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2025.0
+pkgver=2025.1
 pkgrel=1
 pkgdesc='Community maintained hooks for PyInstaller (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/pyinstaller/pyinstaller-hooks-contrib'
-license=('APL' 'GPL')
+license=('spdx:Apache-2.0 AND GPL-2.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-packaging")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
@@ -17,7 +17,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname//-/_}-${pkgver}.tar.gz")
-sha256sums=('6dc0b55a1acaab2ffee36ed4a05b073aa0a22e46f25fb5c66a31e217454135ed')
+sha256sums=('130818f9e9a0a7f2261f1fd66054966a3a50c99d000981c5d1db11d3ad0c6ab2')
 
 build() {
   cp -r "${_realname//-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
