libadwaita: update to 1.6.4

--- a/mingw-w64-libadwaita/PKGBUILD
+++ b/mingw-w64-libadwaita/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=libadwaita
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.6.3
+pkgver=1.6.4
 pkgrel=1
 pkgdesc="Building blocks for modern GNOME applications (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64' 'mingw32')
-url="https://gitlab.gnome.org/GNOME/libadwaita"
+url='https://gnome.pages.gitlab.gnome.org/libadwaita/'
+msys2_repository_url='https://gitlab.gnome.org/GNOME/libadwaita'
 msys2_references=(
   'archlinux: libadwaita'
 )
@@ -21,6 +22,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-appstream"
          "${MINGW_PACKAGE_PREFIX}-gtk4"
          "${MINGW_PACKAGE_PREFIX}-pango")
 makedepends=("${MINGW_PACKAGE_PREFIX}-meson"
+             "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-vala"
              "${MINGW_PACKAGE_PREFIX}-sassc"
@@ -29,7 +31,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-gobject-introspection")
 source=("https://download.gnome.org/sources/libadwaita/${pkgver:0:3}/libadwaita-${pkgver}.tar.xz"
         0002-meson-fix-static-lib-install.patch)
-sha256sums=('c88d4516edd1e0fc61be925f414efc340e149171756064473a082b6ae9a5dc00'
+sha256sums=('1011a5a93dc3b87e82da19910d7fab01a3b9d7fcb0b09751babb476eedb3d9a3'
             '2f5724a5ab3ac06334f0d72ea4bfe4f9a3aa6e2af6f17b602b78b75dd29f96f7')
 
 prepare() {
