python-pyopenssl: update to 25.0.0

--- a/mingw-w64-python-pyopenssl/PKGBUILD
+++ b/mingw-w64-python-pyopenssl/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=pyopenssl
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=24.3.0
+pkgver=25.0.0
 pkgrel=1
 pkgdesc="Python wrapper module around the OpenSSL library (mingw-w64)"
 arch=('any')
@@ -18,13 +18,14 @@ msys2_references=(
 )
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-openssl"
-         "${MINGW_PACKAGE_PREFIX}-python-cryptography")
+         "${MINGW_PACKAGE_PREFIX}-python-cryptography"
+         "${MINGW_PACKAGE_PREFIX}-python-typing_extensions")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('49f7a019577d834746bc55c5fce6ecbcec0f2b4ec5ce1cf43a9a173b8138bb36')
+sha256sums=('cd2cef799efa3936bb08e8ccb9433a575722b9dd986023f1cabc4ae64e9dac16')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
