--- a/mingw-w64-tree-sitter/PKGBUILD
+++ b/mingw-w64-tree-sitter/PKGBUILD
@@ -4,8 +4,8 @@ _realname=tree-sitter
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-lib${_realname}")
-pkgver=0.24.7
-pkgrel=2
+pkgver=0.25.0
+pkgrel=1
 pkgdesc="An incremental parsing system for programming tools (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,17 +22,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-libwasmtime")
 checkdepends=('git')
-source=("https://github.com/tree-sitter/tree-sitter/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
-        "https://github.com/tree-sitter/tree-sitter/commit/178c5d93f4ca8c962dc977365148148edbce1f24.patch")
-sha256sums=('7cbc13c974d6abe978cafc9da12d1e79e07e365c42af75e43ec1b5cdc03ed447'
-            '13296d59975d39b33a53d79caa1eee39b7bd18f5faf81aec1730a8ac84ef1010')
+source=("https://github.com/tree-sitter/tree-sitter/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('3729e98e54a41a4c03f4f6c0be580d14ed88c113d75acf15397b16e05cf91129')
 noextract=("${_realname}-${pkgver}.tar.gz")
 
 prepare() {
   tar -xzf "${_realname}-${pkgver}.tar.gz" || true
   cd "${_realname}-${pkgver}"
-
-  patch -Np1 -i ../178c5d93f4ca8c962dc977365148148edbce1f24.patch
 
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
@@ -53,8 +49,6 @@ build() {
       -DBUILD_SHARED_LIBS=ON \
       -DTREE_SITTER_FEATURE_WASM=ON \
       -DCMAKE_DLL_NAME_WITH_SOVERSION=ON \
-      -DWASMTIME_INCLUDE_DIR="${MINGW_PREFIX}/include/wasmtime" \
-      -DWASMTIME_LIBRARY="${MINGW_PREFIX}/bin/wasmtime.dll" \
       -S "${_realname}-${pkgver}/lib" \
       -B "build-${MSYSTEM}"
 
