astyle: Update to 3.6.6

--- a/mingw-w64-astyle/PKGBUILD
+++ b/mingw-w64-astyle/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=astyle
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=3.4.13
+pkgver=3.6.6
 pkgrel=1
 pkgdesc='A Free, Fast, and Small Automatic Formatter for C, C++, C++/CLI, Objective-C, C#, and Java Source Code (mingw-w64)'
 arch=('any')
@@ -20,8 +20,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-cc")
 source=("https://gitlab.com/saalen/${_realname}/-/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
         "0001-Fix-CMake-install.patch")
-sha256sums=('10f5f38b9e17b48b84d38de871878e8d1df98532f876259ef2bb25e889ef1545'
-            '95f9d1e3cc073873a11c51b64bb7b0121d24a1c42e79e4a81d7f5ebd7131b8e9')
+sha256sums=('c5ecef192d09e9c5bd2e93edf54c9ef5e715c2195b9c36c3326daae329201b9b'
+            '052e1e1528ff3bfb5dc90c37c7f7f3dff48d49c35042f0dba4ef565ba85f2f14')
 
 prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}
@@ -43,6 +43,7 @@ build() {
     "${MINGW_PREFIX}"/bin/cmake.exe \
       -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
+      -DINSTALL_DOC=ON \
       "${extra_config[@]}" \
       ../${_realname}-${pkgver}/AStyle
 
