turbo: update to 2.4.0 add patch for git2 update

--- a/mingw-w64-turbo/PKGBUILD
+++ b/mingw-w64-turbo/PKGBUILD
@@ -3,15 +3,16 @@
 _realname=turbo
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.3.4
+pkgver=2.4.0
 pkgrel=1
 pkgdesc="Incremental bundler and build system optimized for JavaScript and TypeScript (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://turbo.build'
-msys2_repository_url='https://github.com/vercel/turbo'
+msys2_repository_url='https://github.com/vercel/turborepo'
 license=('spdx:MPL-2.0')
-depends=("${MINGW_PACKAGE_PREFIX}-zlib"
+depends=("${MINGW_PACKAGE_PREFIX}-libgit2"
+         "${MINGW_PACKAGE_PREFIX}-zlib"
          "${MINGW_PACKAGE_PREFIX}-zstd")
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-capnproto"
@@ -24,13 +25,18 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
 options=('!strip')
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.10+zstd.1.5.6/download"
+        "https://patch-diff.githubusercontent.com/raw/vercel/turborepo/pull/9812.patch"
         "zstd-sys-remove-statik.patch")
-sha256sums=('685608d5714cd15371533f5e998d2c0652e3bad13e6908ea946ee7cb5b8da622'
+sha256sums=('6ac0f9d29eefd3912b6bfc1582ead08ef29200efb81f4a14fa780c400b04d4d0'
             'c253a4914af5bafc8fa8c86ee400827e83cf6ec01195ec1f1ed8441bf00d65aa'
+            'cbe8ece7518b8ae200dfbb25193b94223873ecb6f706e7986bd53c88a9d813b8'
             '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
 prepare() {
-  cd "${_realname}"
+  cd turborepo
+
+  # https://github.com/vercel/turborepo/pull/9812
+  patch -Np1 -i ../9812.patch
 
   patch -d ../zstd-sys-2.0.10+zstd.1.5.6 -i ../zstd-sys-remove-statik.patch
   cat >> Cargo.toml <<END
@@ -45,10 +51,11 @@ END
 }
 
 build() {
-  cd "${_realname}"
+  cd turborepo
 
   export RUSTC_BOOTSTRAP=1
   export OPENSSL_NO_VENDOR=1
+  export LIBGIT2_NO_VENDOR=1
   export PKG_CONFIG_ALL_DYNAMIC=1
   export ZSTD_SYS_USE_PKG_CONFIG=1
   # this disables telemetry only at runtime, the relevant code is compiled anyway
@@ -57,12 +64,12 @@ build() {
 }
 
 package() {
-  install -Dm755 "${_realname}/target/release-turborepo/turbo" "${pkgdir}${MINGW_PREFIX}/bin/turbo"
+  install -Dm755 turborepo/target/release-turborepo/turbo "${pkgdir}${MINGW_PREFIX}/bin/turbo"
 
-  local _complete="${_realname}/target/release-turborepo/turbo completion"
+  local _complete='turborepo/target/release-turborepo/turbo completion'
   $_complete bash | install -Dm644 /dev/stdin "${pkgdir}${MINGW_PREFIX}/share/bash-completion/completions/${_realname}"
   $_complete fish | install -Dm644 /dev/stdin "${pkgdir}${MINGW_PREFIX}/share/fish/vendor_completions.d/${_realname}.fish"
   $_complete zsh | install -Dm644 /dev/stdin "${pkgdir}${MINGW_PREFIX}/share/zsh/site-functions/_${_realname}"
 
-  install -Dm644 "${_realname}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 turborepo/LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
