json-fortran: disable clangarm64.

--- a/mingw-w64-json-fortran/PKGBUILD
+++ b/mingw-w64-json-fortran/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=9.0.2
 pkgrel=1
 pkgdesc="A Modern Fortran JSON API. (mingw-w64)"
 arch=('any')
-mingw_arch=('ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('ucrt64' 'clang64')
 url='https://jacobwilliams.github.io/json-fortran/'
 msys2_repository_url='https://github.com/jacobwilliams/json-fortran'
 license=('spdx:BSD-3-Clause')
