enable clang64/clangarm64 for some Fortran packages.

--- a/mingw-w64-toml-f/PKGBUILD
+++ b/mingw-w64-toml-f/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.4.2
 pkgrel=1
 pkgdesc="A TOML parser implementation for data serialization and deserialization in Fortran. (mingw-w64)"
 arch=('any')
-mingw_arch=('ucrt64')
+mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/toml-f/toml-f'
 license=('spdx:Apache-2.0 OR MIT')
 depends=($([[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]] || echo "${MINGW_PACKAGE_PREFIX}-gcc-libgfortran"))
