--- a/mingw-w64-dftd4/PKGBUILD
+++ b/mingw-w64-dftd4/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=3.7.0
 pkgrel=1
 pkgdesc="Generally Applicable Atomic-Charge Dependent London Dispersion Correction. (mingw-w64)"
 arch=('any')
-mingw_arch=('ucrt64')
+mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://dftd4.readthedocs.io/'
 msys2_repository_url="https://github.com/dftd4/dftd4"
 license=('spdx:LGPL-3.0-or-later')
