--- a/mingw-w64-multicharge/PKGBUILD
+++ b/mingw-w64-multicharge/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.3.0
 pkgrel=1
 pkgdesc="Electronegativity equilibration model for atomic partial charges. (mingw-w64)"
 arch=('any')
-mingw_arch=('ucrt64')
+mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/grimme-lab/multicharge'
 license=('spdx:Apache-2.0')
 depends=($([[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]] || echo "${MINGW_PACKAGE_PREFIX}-gcc-libgfortran")
