--- a/mingw-w64-s-dftd3/PKGBUILD
+++ b/mingw-w64-s-dftd3/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.0.0
 pkgrel=1
 pkgdesc="Simple reimplementation of the DFT-D3 dispersion model. (mingw-w64)"
 arch=('any')
-mingw_arch=('ucrt64')
+mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/dftd3/simple-dftd3'
 license=('spdx:LGPL-3.0-or-later')
 depends=($([[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]] || echo "${MINGW_PACKAGE_PREFIX}-gcc-libgfortran")
