libtree-sitter rebuilds

--- a/mingw-w64-mesonlsp/PKGBUILD
+++ b/mingw-w64-mesonlsp/PKGBUILD
@@ -4,7 +4,7 @@ _realname=mesonlsp
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=4.3.7
-pkgrel=2
+pkgrel=3
 pkgdesc='Meson language server (mingw-w64)'
 arch=('any')
 mingw_arch=('ucrt64')
@@ -29,15 +29,23 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-lsprotocol"
 source=("git+${url}.git#tag=v${pkgver}"
         "git+https://github.com/ada-url/ada#tag=v2.9.2"
         "sha256::git+https://github.com/amosnier/sha-2#commit=49265c656f9b370da660531db8cc6bf0a2e110a6"
-        "git+https://github.com/JCWasmx86/muon"
-        "git+https://github.com/JCWasmx86/tree-sitter-ini"
-        "git+https://github.com/JCWasmx86/tree-sitter-meson")
+        "git+https://github.com/JCWasmx86/muon#commit=c44ff3d842eb9fb738b14e3c6e23693290c61601"
+        "git+https://github.com/JCWasmx86/tree-sitter-ini#commit=848b6269f7039739aebd169fbd3d5e6e34bef661"
+        "git+https://github.com/JCWasmx86/tree-sitter-meson#commit=09665faff74548820c10d77dd8738cd76d488572")
 sha256sums=('dbddb485de460a1bfc0efb32d76517e589229e0e1a571aaa15e9700f871127b2'
             '4a796665d17f4b050fd37395492f2fecb06cf98a3229a099b9b3786bbc137acc'
             '324f8510ec22aa04350183bb37263c03fd81ad708fcbc0b82056f558db753cc7'
-            'SKIP'
-            'SKIP'
-            'SKIP')
+            '1fc46d8a15237ce5ec6803469e10a4545ce18ab2811bc0441d6901b22b0cba97'
+            'f6b7d4d26025b5e4c6abb6bc858254501ceddaa69b4435002d612abaa8a67b84'
+            'dfd1f1c88b727dfbe535446bb8e1fec2a17c410b5455a9a70dfce3f8d76c9380')
+
+prepare() {
+  cd "${_realname}"
+
+  # apply patches that also fix build
+  git cherry-pick -n 8edb5af16db9d7651a88ae19d0574195a02e40b6
+  git cherry-pick -n 851eb422851406ca4221e7bd866cd97b51c9ac06
+}
 
 build() {
   export MESON_PACKAGE_CACHE_DIR="${srcdir}"
@@ -57,7 +65,7 @@ build() {
 
 package() {
   meson install -C "build-${MSYSTEM}" --destdir "${pkgdir}"
-  rm "${pkgdir}${MINGW_PREFIX}/bin/Swift-MesonLSP"
+  rm "${pkgdir}${MINGW_PREFIX}"/bin/{Swift-MesonLSP,muon}
 
   install -Dm644 "${_realname}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
