emscripten: Enable aaarch64 builds

--- a/mingw-w64-emscripten/PKGBUILD
+++ b/mingw-w64-emscripten/PKGBUILD
@@ -13,7 +13,7 @@ _llvm_project_revision=bda19768de03a0322c4094c8d0e00ad033268309
 pkgrel=1
 pkgdesc="Compile C and C++ into highly-optimizable JavaScript for the web (mingw-w64)"
 arch=('any')
-mingw_arch=('ucrt64' 'clang64')
+mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url="https://emscripten.org"
 msys2_repository_url="https://github.com/emscripten-core/emscripten"
 license=('custom')
