enca: Enable aarch64 builds

--- a/mingw-w64-enca/PKGBUILD
+++ b/mingw-w64-enca/PKGBUILD
@@ -4,10 +4,10 @@ _realname=enca
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=1.19
-pkgrel=3
+pkgrel=4
 pkgdesc="Charset analyser and converter (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://cihar.com/software/enca/"
 license=('GPL')
 depends=("${MINGW_PACKAGE_PREFIX}-recode")
@@ -30,7 +30,7 @@ prepare() {
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
-  CFLAGS+=" -Wno-int-conversion -Wno-implicit-function-declaration"
+  CFLAGS+=" -Wno-int-conversion -Wno-implicit-function-declaration -Wno-incompatible-pointer-types"
 
   ../enca-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
