qt6: update to 6.8.2 (#23256)
* update to 6.8.1

* update qt

* remove obsolete patches

* fix patching

--- a/mingw-w64-qt6-quick3d/PKGBUILD
+++ b/mingw-w64-qt6-quick3d/PKGBUILD
@@ -4,7 +4,7 @@ _realname=qt6-quick3d
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-debug")
-_qtver=6.8.1
+_qtver=6.8.2
 pkgver=${_qtver/-/}
 pkgrel=1
 pkgdesc='Qt module and API for defining 3D content in Qt Quick (mingw-w64)'
@@ -28,13 +28,9 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "rsync")
 _pkgfn="${_realname/6-/}-everywhere-src-${_qtver}"
 source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/submodules/${_pkgfn}.tar.xz"
-        001-appending-qt6-to-remove-qt5-conflict.patch
-        002-fix-bezier-curve.patch
-        003-fix-pointi.patch)
-sha256sums=('3f3d345e6c95fcd40ab37e6a37cd31811e5d239dea8e142e632d4ea41bf20ce7'
-            '211bb1f042bf9c0ddedb15b0e3d62b94e3b247dc96294fd92f4d8035784f1c7d'
-            '774abd51e93fbcd9b4db4cd97a0200b546eccc0dc8ca9014c1a05a7c244e6bb8'
-            'ce6302aee7306d5bbffb4c5887b102e542bf08068bed014ab4a91f1245cebed9')
+        001-appending-qt6-to-remove-qt5-conflict.patch)
+sha256sums=('084cebccb8c5b1c6bafb7756ab89b08ced23c20cd2e996ed54909a154a9f0b6d'
+            '211bb1f042bf9c0ddedb15b0e3d62b94e3b247dc96294fd92f4d8035784f1c7d')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -51,11 +47,6 @@ prepare() {
   apply_patch_with_msg \
     001-appending-qt6-to-remove-qt5-conflict.patch
 
-  # https://bugreports.qt.io/browse/QTBUG-131962
-  # https://github.com/RenderKit/embree/commit/cda4cf1919bb2a748e78915fbd6e421a1056638d
-  apply_patch_with_msg \
-    002-fix-bezier-curve.patch \
-    003-fix-pointi.patch
 }
 
 build() {
