thorvg: update to 0.15.10

--- a/mingw-w64-thorvg/PKGBUILD
+++ b/mingw-w64-thorvg/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=thorvg
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.13.8
+pkgver=0.15.10
 pkgrel=1
 pkgdesc="Lightweight vector graphic library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://www.thorvg.org/'
+msys2_repository_url='https://github.com/thorvg/thorvg'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-libpng"
          "${MINGW_PACKAGE_PREFIX}-libjpeg-turbo"
@@ -17,8 +18,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("https://github.com/thorvg/thorvg/archive/refs/tags/v${pkgver}.tar.gz")
-sha256sums=('ce49929a94d1686d4f1436da6ef5fa7a8439901c22b5fa0879d7d5879b8ba2bd')
+source=("${msys2_repository_url}/archive/refs/tags/v${pkgver}.tar.gz")
+sha256sums=('ea4bfda399364d0037b68b7bb50f78769d00cbe9d8ed743e05ae6c50d225c7cc')
 
 prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}
