dosbox: Update to 0.82.0

--- a/mingw-w64-dosbox/PKGBUILD
+++ b/mingw-w64-dosbox/PKGBUILD
@@ -4,7 +4,7 @@ _realname=dosbox
 _forkname=dosbox-staging
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.80.1
+pkgver=0.82.0
 pkgrel=1
 pkgdesc="Emulator with builtin DOS for running DOS Games (mingw-w64)"
 arch=('any')
@@ -29,7 +29,15 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf")
 source=("https://github.com/dosbox-staging/dosbox-staging/archive/refs/tags/v${pkgver}.tar.gz")
-sha256sums=('2ca69e65e6c181197b63388c60487a3bcea804232a28c44c37704e70d49a0392')
+sha256sums=('a3f63f86bf203ba28512e189ce6736cdb0273647e77a62ce47ed3d01b3b4a88d')
+noextract=("v${pkgver}.tar.gz")
+
+prepare() {
+  bsdtar -xf "v${pkgver}.tar.gz" || bsdtar -xf "v${pkgver}.tar.gz"
+
+  cd "${_forkname}-${pkgver}"
+  echo -e "#!python\nprint('${pkgver}')" > scripts/get-version.sh
+}
 
 build() {
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
@@ -65,5 +73,5 @@ package() {
 
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/meson install
 
-  install -Dm644 "${srcdir}/${_forkname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  install -Dm644 "${srcdir}/${_forkname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
