--- a/mingw-w64-dosbox-staging/PKGBUILD
+++ b/mingw-w64-dosbox-staging/PKGBUILD
@@ -1,7 +1,6 @@
 # Maintainer: Christoph Reiter <reiter.christoph@gmail.com>
 
-_realname=dosbox
-_forkname=dosbox-staging
+_realname=dosbox-staging
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=0.82.0
@@ -11,6 +10,9 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/dosbox-staging/dosbox-staging'
 license=('spdx:GPL-2.0-or-later')
+provides=("${MINGW_PACKAGE_PREFIX}-dosbox")
+replaces=("${MINGW_PACKAGE_PREFIX}-dosbox")
+conflicts=("${MINGW_PACKAGE_PREFIX}-dosbox")
 depends=(
     "${MINGW_PACKAGE_PREFIX}-fluidsynth"
     "${MINGW_PACKAGE_PREFIX}-libpng"
@@ -35,7 +37,7 @@ noextract=("v${pkgver}.tar.gz")
 prepare() {
   bsdtar -xf "v${pkgver}.tar.gz" || bsdtar -xf "v${pkgver}.tar.gz"
 
-  cd "${_forkname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
   echo -e "#!python\nprint('${pkgver}')" > scripts/get-version.sh
 }
 
@@ -57,7 +59,7 @@ build() {
     "${extra_config[@]}" \
     -Dunit_tests=disabled \
     -Ddefault_library=shared \
-    ../${_forkname}-${pkgver}
+    ../${_realname}-${pkgver}
 
   ${MINGW_PREFIX}/bin/meson compile
 }
@@ -73,5 +75,5 @@ package() {
 
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/meson install
 
-  install -Dm644 "${srcdir}/${_forkname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
