python-cx-freeze: update to 7.2.9

--- a/mingw-w64-python-cx-freeze/PKGBUILD
+++ b/mingw-w64-python-cx-freeze/PKGBUILD
@@ -6,7 +6,7 @@
 _realname=cx-freeze
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=7.2.8
+pkgver=7.2.9
 pkgrel=1
 pkgdesc="Creates standalone executables from Python scripts, with the same performance (mingw-w64)"
 arch=('any')
@@ -19,6 +19,7 @@ license=('spdx:PSF-2.0')
 depends=(
   "${MINGW_PACKAGE_PREFIX}-python"
   "${MINGW_PACKAGE_PREFIX}-python-packaging"
+  "${MINGW_PACKAGE_PREFIX}-python-pip"
   "${MINGW_PACKAGE_PREFIX}-python-setuptools"
   "${MINGW_PACKAGE_PREFIX}-python-cx-logging"
   "${MINGW_PACKAGE_PREFIX}-python-lief"
@@ -40,18 +41,15 @@ checkdepends=(
 options=(!strip)
 source=(
   "https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz"
-  "0001.patch"
 )
 sha256sums=(
-  '678fe5b074c1511918eded7b3cbe542ea57b4ee292645cdaceb9c691ce13293e'
-  'c73f986668aa8e880134e26a1b218ca88075b22581a3db00e1f3de13be2db7b6'
+  '5aae3089b62d6863c0661d1c3117505ab0ae0f8962e1feca137329a175c9979d'
 )
 
 prepare() {
   cd "${srcdir}"/cx_Freeze-${pkgver}
   # ignore version check for setuptools
   sed -i 's/"setuptools>=.*"/"setuptools"/' pyproject.toml
-  patch -p0 -i "${srcdir}"/0001.patch
 
   rm -Rf "${srcdir}"/python-${_realname}-${MSYSTEM}
   cp -a "${srcdir}"/cx_Freeze-${pkgver} "${srcdir}"/python-${_realname}-${MSYSTEM}
@@ -65,7 +63,7 @@ build() {
 check() {
   cd python-${_realname}-${MSYSTEM}
   ${MINGW_PREFIX}/bin/pip install cx_Freeze -f dist --no-deps --no-index
-  ${MINGW_PREFIX}/bin/pytest -nauto --cov="cx_Freeze" --cov-report=xml
+  ${MINGW_PREFIX}/bin/pytest -nauto --cov="cx_Freeze"
 }
 
 package() {
