zed: update to 0.171.6

--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.171.5
+pkgver=0.171.6
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
@@ -45,7 +45,7 @@ source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zed-set-rustflags.patch"
         "https://github.com/zed-industries/zed/commit/0e0534831155cd22c1af226fc31f59c52248cb1b.patch"
         "zstd-sys-remove-statik.patch")
-sha256sums=('f21a7184000efeb55c3a95a1b218fa45429f25c984149d43d0dd4d9928dd75cb'
+sha256sums=('f40ffe43874d7f730b779263ceea0ba51f486907812e8eeee2738315f881b732'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
             '86bad9a2bb0356bdd820a6ac73ec3f736f784b4d487af9a8f6bdc0c3e5b309d1'
@@ -59,7 +59,7 @@ prepare() {
 
   # https://github.com/zed-industries/zed/pull/22876
   git cherry-pick -n d1be419fff415329b38f26aff90488700702c82a
-  # remove collab support to avoid wevrtc compilation
+  # remove collab support to avoid webrtc compilation
   # https://github.com/zed-industries/zed/pull/23518
   patch -Np1 -i "../0e0534831155cd22c1af226fc31f59c52248cb1b.patch"
   # use system cargo about to generate license file
