--- a/mingw-w64-sip/PKGBUILD
+++ b/mingw-w64-sip/PKGBUILD
@@ -5,23 +5,18 @@
 _realname=sip
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-sip4")
-replaces=("${MINGW_PACKAGE_PREFIX}-sip5")
-pkgver=6.9.1
+pkgver=6.10.0
 pkgrel=1
 pkgdesc="A tool that makes it easy to create Python bindings for C and C++ libraries (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-msys2_references=(
-  'pypi: sip'
-)
-license=('spdx:BSD-2-Clause')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://riverbankcomputing.com/software/sip"
 msys2_repository_url="https://github.com/Python-SIP/sip"
 msys2_references=(
   'archlinux: sip'
   'pypi: sip'
 )
+license=('spdx:BSD-2-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-packaging"
          "${MINGW_PACKAGE_PREFIX}-python-setuptools")
@@ -32,7 +27,7 @@ options=(!strip)
 source=(https://pypi.python.org/packages/source/s/sip/sip-${pkgver}.tar.gz
         001-mingw-python.patch
         002-wrappers.patch)
-sha256sums=('7904be5190d7879952563b78a3af0e58fa27d9525af7f53f93eac7a83b433e7b'
+sha256sums=('fa0515697d4c98dbe04d9e898d816de1427e5b9ae5d0e152169109fd21f5d29c'
             '15d64d0ff5253096a3fb5d3d4584eab8f93b9e9ffbcfee1c02dce00d695e6027'
             'ba695df87296ad5be7a64d57ce0a8f54db3867a9b69b303b76482f2ac48bb7d6')
 
