pyqt-builder: update to 1.18.0

--- a/mingw-w64-pyqt-builder/PKGBUILD
+++ b/mingw-w64-pyqt-builder/PKGBUILD
@@ -4,11 +4,11 @@
 _realname=pyqt-builder
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.17.1
+pkgver=1.18.0
 pkgrel=1
 pkgdesc="The PEP 517 compliant PyQt build system (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/Python-PyQt/PyQt-builder"
 msys2_documentation_url="https://pyqt-builder.readthedocs.io"
 msys2_references=(
@@ -25,7 +25,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
 options=(!strip)
 source=("https://pypi.io/packages/source/P/PyQt-builder/pyqt_builder-${pkgver}.tar.gz"
         001-mingw-python.patch)
-sha256sums=('457dcd6a1408ea4bf1264e3511c734d53451ae8a3905e98982d50f7b3fdab724'
+sha256sums=('ce9930aafc1ce0af928a6944bcc80ecf78c23ffdcad6ac111306c4c71057848e'
             'f373ea9e84c0340a425ba795b2a3eacabf1e5ec289c13661ba6d34ff373dffb8')
 
 prepare() {
